# chartmind

./: .gitignore  LICENSE  README.md  pyproject.toml
chartmind/: __init__.py  client.py  models.py
chartmind/backends/: base.py  hf_inference.py
chartmind/connectors/: base.py  postgres.py  sqlite.py
chartmind/render/: matplotlib_fallback.py
chartmind/stages/: chart_reason.py  executor.py  schema_probe.py  sql_gen.py  sql_validate.py  svg_render.py
tests/: test_chart_reason.py  test_client.py  test_connectors_sqlite.py  test_models.py  test_sql_gen.py  test_sql_validate.py  test_svg_render.py
